# Senior-Project

./: .gitignore  README.md
File_Creation/: CNNObjects.py  FileOutputSpec.txt  README.md  parse.py  requirements.txt
File_Parsing_Library/File_Parsing_Library/: ConvLayer.cpp  ConvLayer.hpp  DenseLayer.cpp  DenseLayer.hpp  FlattenLayer.cpp  FlattenLayer.hpp  InputLayer.cpp  InputLayer.hpp  Layer.cpp  Layer.hpp  LayerConstants.hpp  Model.cpp  Model.hpp  PoolLayer.cpp  PoolLayer.hpp  main.cpp  modelRead.cpp  modelRead.hpp
MNIST_Reader/MNIST_Reader/: MNIST_Reader.cpp  MNIST_Reader.hpp  main.cpp
Matrix_Library/: matrix.cpp
MnistCnnModel/: CNNObjects.py  model.h5  model.txt  modelHex.txt  model_structure.json  model_summary.txt  output.txt  parse.py  runme.py
MnistCnnModel/Saved Model/: keras_metadata.pb  saved_model.pb
MnistCnnModel/Saved Model/variables/: variables.data-00000-of-00001  variables.index
MnistCnnModel/logs/train/: events.out.tfevents.1663906947.DESKTOP-U748U28.2572.0.v2
Model_Creation/: main.py  requirements.txt  runme.py
Model_Creation/Model_Files/: model.h5  model.json
Model_Tests/: test.py
NeuralNetLibrary/: CMakeLists.txt  MNSIcnn.h5  main.cpp  matrix.hpp  netowrkOps.cpp  networkOps.cpp  networkOps.hpp  networksOps.hpp
